--- a/dockerfile.backend
+++ b/dockerfile.backend
@@ -4,6 +4,15 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . .
+COPY main.py .
+COPY models.py .
+COPY schemas.py .
+COPY create_tables.py .
+COPY load_exersices.py .
+COPY exersices.json .
+COPY db.py .
+
+
+
 
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
